--- a/styles/structure.scss
+++ b/styles/structure.scss
@@ -30,13 +30,14 @@
   nav {
       width: 230px;
       height: calc(100% - 30px);
+      overflow-y: auto;
   }
 
   article {
 
       width: 100%;
       height: calc(100% - 45px);
-      overflow-y: scroll;
+      overflow-y: auto;
       //padding-left: 30px;
   }
 
